[package]
name = "jsst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.22.0", features = ["serde", "v4"]}
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.13", features = ["json", "blocking"] }
serde_json = "1.0"
chrono = "0.4.44"
log = "0.4.29"
rand = "0.9.2"
yescrypt = "0.1.0-rc.5"
