[package]
name = "jsst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true

[dependencies]
uuid = { version = "1.22.0", features = ["serde", "v4"]}
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.13", features = ["json", "blocking"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread"]}
aws-credential-types = { version = "1.2.14", features = ["hardcoded-credentials"]}
aws-sdk-s3 = { version = "1", default-features = false, features = ["behavior-version-latest", "rt-tokio", "default-https-client"] }
aws-config = {  version = "1.8.15", default-features = false }
serde_json = "1.0"
chrono = "0.4.44"
log = "0.4.29"
rand = "0.9.2"
yescrypt = "0.1.0-rc.5"
walkdir = "2"
tar = "0.4.45"
aes-gcm = "0.10.3"
base64 = "0.22.1"
flate2 = "1.1.9"